--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a simple library app that manages its processes",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,21 @@
   "bugs": {
     "url": "https://github.com/aimeedyki/hello-Books/issues"
   },
-  "homepage": "https://github.com/aimeedyki/hello-Books#readme"
+  "homepage": "https://github.com/aimeedyki/hello-Books#readme",
+  "devDependencies": {
+    "eslint": "^4.4.0",
+    "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.2",
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "pg": "^7.1.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0"
+  }
 }
