--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple library app that manages its processes",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./bin/www",
+    "start:dev": "nodemon ./bin/www --exec babel-node ./bin/www --presets es2015,stage-2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,10 +22,14 @@
   },
   "homepage": "https://github.com/aimeedyki/hello-Books#readme",
   "devDependencies": {
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2016": "^6.24.1",
     "eslint": "^4.4.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
