--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple library app that manages its processes",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./bin/www --exec babel-node ./bin/www --presets es2015,stage-2",
+    "start:dev": "nodemon app.js --exec babel-node app.js --presets es2015,stage-2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
