--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon app.js --exec babel-node app.js --presets es2015,stage-2",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/models_test --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -24,21 +24,30 @@
   "devDependencies": {
     "babel-loader": "^7.1.1",
     "babel-preset-es2016": "^6.24.1",
-    "eslint": "^4.4.0",
+    "babel-register": "^6.24.1",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "chai": "^4.1.1",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.2",
+    "mocha": "^3.5.0",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.4.2",
-    "sequelize-cli": "^2.8.0"
+    "sequelize-cli": "^2.8.0",
+    "supertest": "^3.0.0"
   }
 }
