--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "chai": "^4.1.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.2",
     "mocha": "^3.5.0",
