--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon app.js --exec babel-node app.js --presets es2015,stage-2",
-    "test": "mocha test/models_test --compilers js:babel-register"
+    "test": "mocha test/routes_test --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
