--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
   },
   "homepage": "https://github.com/aimeedyki/hello-Books#readme",
   "devDependencies": {
+
+  },
+  "dependencies": {
     "babel-loader": "^7.1.1",
     "babel-preset-es2016": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
-    "nodemon": "^1.11.0"
-  },
-  "dependencies": {
+    "nodemon": "^1.11.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
