--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a simple library app that manages its processes",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon app.js --exec babel-node app.js --presets es2015,stage-2",
-    "start": "./node_modules/.bin/babel-node app.js --presets es2015,stage-2",
+    "start:dev": "nodemon app.js --exec babel-node app.js",
+    "start": "./node_modules/.bin/babel-node app.js",
     "test": "mocha test/routes_test --compilers js:babel-register"
   },
   "repository": {
