refactor code to handle additional route validations that arose from tests

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -10,7 +10,7 @@
   "test": {
      "username": "admin1",
     "password": "booksville",
-    "database": "booksville",
+    "database": "testdb",
     "host": "127.0.0.1",
     "port": "5432",
     "dialect": "postgresql"
