--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,3 +1,5 @@
+
+
 {
   "development": {
     "username": "admin1",
@@ -17,6 +19,6 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgresql"
+    "dialect": "postgres"
   }
 }
