--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ language: node_js
 
 node_js:
   - node
-
+notifications:
+  - email: false
+services:
+  - postgresql
 before_script:
   - npm install -g codeclimate-test-reporter
-
+  - npm install -g sequelize 
 script:
   - npm test
 
 after_success:
-  - CODE_CLIMATE_REPO_TOKEN=$CODE_CLIMATE_REPO_TOKEN codeclimate-test-reporter < coverage/lcov.info
+  - CODE_CLIMATE_REPO_TOKEN=4ff2005148c20d6a51b65dbf57183e1cdc52e751b5eb95c4cc6ae7eb8ad6add5 codeclimate-test-reporter < coverage/lcov.info
+
+ 
