--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: node_js
-
 node_js:
   - node
 notifications:
@@ -8,10 +7,12 @@ services:
   - postgresql
 before_script:
   - npm install -g codeclimate-test-reporter
-  - npm install -g sequelize 
+  - npm install -g sequelize
+  - psql -c 'drop database if exists travis;' -U postgres
+  - psql -c 'create database travis;' -U postgres
+  - NODE_ENV=test npm run test:db
 script:
   - npm test
-
 after_success:
   - CODE_CLIMATE_REPO_TOKEN=4ff2005148c20d6a51b65dbf57183e1cdc52e751b5eb95c4cc6ae7eb8ad6add5 codeclimate-test-reporter < coverage/lcov.info
 
