--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=$CODECLIMATE_REPO_TOKEN
+    - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
 language: node_js
+rvm:
+  - 2.2.0
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+script:
+  - bundle exec rspec
+  # Preferably you will run test-reporter on branch update events. But
+  # if you setup travis to build PR updates only, you don't need to run
+  # the line below
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
+  # In the case where travis is setup to build PR updates only,
+  # uncomment the line below
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 node_js:
   - node
 notifications:
-  - email: false
+  email: false
 services:
   - postgresql
 before_script:
@@ -14,6 +32,8 @@ before_script:
 script:
   - npm test
 after_success:
-  - CODE_CLIMATE_REPO_TOKEN=4ff2005148c20d6a51b65dbf57183e1cdc52e751b5eb95c4cc6ae7eb8ad6add5 codeclimate-test-reporter < coverage/lcov.info
+  - npm run coverage #this line generates the report
+  - codeclimate-test-reporter < coverage/lcov.info #this line sends report to codeclimate
+  - coveralls < coverage/lcov.info #this line sends report to coveralls
 
  
