--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "./node_modules/.bin/babel-node app.js",
     "test": "SET NODE_ENV=test&&mocha test/routes_test --compilers js:babel-register --timeout 70000",
     "test:db": "sequelize db:migrate --env test",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js",
+    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js"
   },
   "repository": {
     "type": "git",
