remove env test in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon app.js --exec babel-node app.js",
     "start": "./node_modules/.bin/babel-node app.js",
     "test": "NODE_ENV=test&&mocha test/routes_test --compilers js:babel-register --timeout 70000",
-    "test:db": "sequelize db:migrate --env test",
+    "test:db": "sequelize db:migrate",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js"
   },
   "repository": {
