--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "eslint-config-react-app": "^2.0.0"
   }
 }
