--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "materialize-css": "^0.100.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
