--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
     "material-ui": "^0.19.0",
     "materialize-css": "^0.100.1",
     "react": "^15.6.1",
+    "react-cookie": "^2.1.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.11",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
