--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "material-ui": "^0.19.0",
     "materialize-css": "^0.100.1",
