--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "chai": "^4.1.1",
+    "classname": "0.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.27.0",
     "dotenv": "^4.0.0",
@@ -85,6 +86,7 @@
     "style-loader": "^0.13.1",
     "supertest": "^3.0.0",
     "swagger-jsdoc": "^1.9.7",
+    "validator": "^8.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.19.1"
   },
