--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -68,6 +67,7 @@
     "jsonwebtoken": "^7.4.2",
     "materialize-css": "^0.100.2",
     "mocha": "^3.5.0",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-sass": "^3.4.2",
     "nodemon": "^1.11.0",
