--- a/.hound.yml
+++ b/.hound.yml
@@ -1,4 +1,6 @@
 eslint:
   enabled: true
-  config_file: .eslintrc
+  config_file: .eslintrc.json
   ignore_file: .eslintignore
+scss:
+  enabled: false
