--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "babel-cli": "^6.26.0",
     "json-loader": "^0.5.7",
     "url-loader": "^0.5.9",
-    "webpack": "^2.5.1",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -74,6 +75,7 @@
     "passport": "^0.3.2",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
@@ -84,9 +86,11 @@
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0",
     "style-loader": "^0.13.1",
+    "superagent": "^3.6.1",
     "supertest": "^3.0.0",
     "swagger-jsdoc": "^1.9.7",
     "validator": "^8.2.0",
+    "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.19.1"
   },
