--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "babel-node app.js",
     "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start2": "node ./client/src/app.js",
-    "test": "NODE_ENV=test mocha test/routes_test --compilers js:babel-register --timeout 70000",
+    "test": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && NODE_ENV=test mocha test/routes_test --compilers js:babel-register --timeout 70000",
     "test:db": "sequelize db:migrate --env test",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js"
+    "cover": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js"
   },
   "repository": {
     "type": "git",
@@ -72,6 +72,7 @@
     "morgan": "^1.8.2",
     "node-sass": "^3.4.2",
     "nodemon": "^1.11.0",
+    "nyc": "^11.2.1",
     "passport": "^0.3.2",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
