--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
   - psql -c 'create database travis;' -U postgres
   - NODE_ENV=test npm run test:db
 script:
-  - npm cover
+  - npm run cover
 after_success:
   - npm install -g codeclimate-test-reporter
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
