--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start2": "node ./client/src/app.js",
     "test": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && NODE_ENV=test mocha test/routes_test --compilers js:babel-register --timeout 70000",
     "test:db": "sequelize db:migrate --env test",
+    "coverage": "istanbul cover _mocha",
     "cover": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly mocha --compilers js:babel-register test/*.js"
   },
   "repository": {
@@ -37,8 +38,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-core": "^6.26.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -65,6 +66,7 @@
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.4.2",
+    "istanbul": "^0.4.5",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^7.4.2",
