--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,5 @@ script:
   - npm run cover
 after_success:
   - npm install -g codeclimate-test-reporter
-  # - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-  # - codeclimate-test-reporter < lcov.info
   - codeclimate-test-reporter < cover/lcov.info
-  - coveralls < cover/lcov.info
+  - npm run coverage
