--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "rules": {
     "one-var": 0,
+    "no-unused-vars": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "max-len": [
