--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
   "rules": {
     "one-var": 0,
     "no-unused-vars": 0,
+    "no-unused-expressions": 0,
+    "no-undef": 0,
+    "no-plusplus": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "max-len": [
