--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "coverage": "nyc --reporter=lcov --reporter=text-lcov npm run cover | coveralls",
     "cover": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && sequelize db:seed:all --env test && cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=lcovonly _mocha --compilers js:babel-register test/*.js --timeout 70000"
   },
+  "nyc": {
+    "exclude": [
+      "server/cron/",
+      "server/nodeMailer/"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aimeedyki/hello-Books.git"
@@ -56,6 +62,7 @@
     "chai": "^4.1.1",
     "classname": "0.0.0",
     "coveralls": "^3.0.0",
+    "cron": "^1.3.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.27.0",
     "dotenv": "^4.0.0",
@@ -78,6 +85,7 @@
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-sass": "^3.4.2",
+    "nodemailer": "^4.4.0",
     "nodemon": "^1.11.0",
     "nyc": "^11.2.1",
     "passport": "^0.3.2",
